@@ -23,10 +23,16 @@ $clientCode = <<<'CODE'
 
 	$read = [$fp];
 	$buf = '';
+	$printed = false;
 	while (stream_select($read, $write, $except, 1000)) {
 		$chunk = stream_get_contents($fp, 4096);
-		var_dump($chunk);
-		$buf .= $chunk;
+		if ($chunk !== "") {
+		    var_dump($chunk);
+		    $buf .= $chunk;
+		} elseif (!$printed) {
+		    $printed = true;
+		    var_dump($chunk);
+		}
 		if ($buf === 'hello, world') {
 			break;
 		}
@@ -109,6 +115,5 @@ ServerClientTestCase::getInstance()->run($clientCode, [
 @unlink(__DIR__ . DIRECTORY_SEPARATOR . 'bug77390-ca.pem.tmp');
 ?>
 --EXPECT--
-string(0) ""
 string(0) ""
 string(12) "hello, world"
